--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "mini-css-extract-plugin": "^2.9.1",
     "next": "14.2.8",
     "next-themes": "^0.3.0",
