--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-rough-notation": "^1.0.5"
+    "react-rough-notation": "^1.0.5",
+    "webpack": "^5.94.0"
   },
   "devDependencies": {
     "postcss": "^8",
