--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^6.0.2",
     "@nextui-org/react": "^2.4.6",
     "axios": "^1.7.7",
     "mini-css-extract-plugin": "^2.9.1",
