--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@mui/material": "^6.0.2",
     "@nextui-org/react": "^2.4.6",
     "axios": "^1.7.7",
