--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^6.0.2",
     "@nextui-org/react": "^2.4.6",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.7",
     "mini-css-extract-plugin": "^2.9.1",
     "next": "^14.2.8",
